@@ -1,5 +1,10 @@
 2005-05-09  Sushma Rai  <rsushma@novell.com>
 
+	* storage/exchange-account.c (exchange_account_connect): Corrected the
+	quota warning message and marked it for translation. Fixes #270363.
+
+2005-05-09  Sushma Rai  <rsushma@novell.com>
+
 	* lib/e2k-autoconfig.c (validate): Removed the hard coded support url
 	from translateable error message. Fixes #272514
 
